--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,33 @@
   margin-bottom: 2rem;
 }
 
+#div-map {
+  position: relative;
+}
+
+.show-map {
+  height: 40vh;
+  margin-bottom: 2rem;
+}
+
+#map {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+
+#infowindow-content .title {
+  font-weight: bold;
+}
+
+#infowindow-content {
+  display: none;
+}
+
+#map #infowindow-content {
+  display: inline;
+}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
