--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,11 @@
 #div-cards-group {
   margin-left: 0;
   margin-right: 0;
+  justify-content: center;
+}
+
+#div-cards-group #initial-text {
+  margin-bottom: 1rem;
 }
 
 #div-cards-group .card {
@@ -183,4 +188,13 @@ footer .text-muted {
 
 .social-networks ul li:not(:first-child) {
   margin-left: 0.7rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .modal-body {
+    height: 100vh !important;
+  }
+  .modal-body-info {
+    height: 10% !important;
+  }
 }
